# on2vec

./: .gitignore  BATCH_PROCESSING.md  CHANGELOG.md  CLAUDE.md  CLI_QUICK_REFERENCE.md  INSTALL_TEST.md  LICENSE  README.md  batch_hf_models.py  batch_process_owl.py  benchmark_datasets.py  clustering_taxonomy_demo.ipynb  create_hf_model.py  create_ontology_sentence_transformer.py  cross_domain_evaluation.py  demo_batch_process.py  demo_hf_integration.py  demo_text_augmented.py  dot_to_embed.py  embed.py  evaluate.py  evaluate_embeddings.py  fetch_owls.py  force_directory.py  force_layout.py  hyperparameter_optimization.py  knowledge_completion_demo.ipynb  main.py  on2vec_demo.ipynb  ontology_alignment_demo.ipynb  parquet_tools.py  process_dir.py  pyproject.toml  recommendation_system_demo.ipynb  semantic_search_demo.ipynb  test_edam_model.py  text_augmented_demo.ipynb  train.py  viz.py
docs/: sentence_transformers_integration.md
mteb_benchmarks/: README.md  benchmark_runner.py
oaei-usecase/: .gitignore  README.md  ontology_merger.py
oaei-usecase/evaluation/: README.md
oaei-usecase/oaei-benchmarks/: README.md
on2vec/: __init__.py  batch_hf_models.py  cli.py  embedding.py  evaluation.py  huggingface_workflows.py  io.py  loss_functions.py  model_card_generator.py  models.py  ontology.py  sentence_transformer_hub.py  training.py  workflows.py
