[project]
name = "on2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "owlready2>=0.47",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pydot>=3.0.4",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "umap-learn>=0.5.7",
]
