[project]
name = "on2vec"
version = "0.1.0"
description = "Generate vector embeddings from OWL ontologies using Graph Neural Networks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "on2vec contributors"}
]
license = {text = "MIT"}
keywords = ["ontology", "embeddings", "graph-neural-networks", "owl", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "owlready2>=0.47",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pydot>=3.0.4",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "umap-learn>=0.5.7",
]

[project.scripts]
on2vec-train = "train:main"
on2vec-embed = "embed:main"
on2vec-main = "main:main"

[project.urls]
Homepage = "https://github.com/your-username/on2vec"
Repository = "https://github.com/your-username/on2vec"
Issues = "https://github.com/your-username/on2vec/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["on2vec"]
