[project]
name = "on2vec"
version = "0.1.0"
description = "Generate vector embeddings from OWL ontologies using Graph Neural Networks with HuggingFace integration and MTEB benchmarking"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "on2vec contributors"}
]
license = {text = "MIT"}
keywords = ["ontology", "embeddings", "graph-neural-networks", "owl", "machine-learning", "huggingface", "sentence-transformers", "mteb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "graphviz>=0.20.3",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "owlready2>=0.47",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pydot>=3.0.4",
    "scikit-learn>=1.3.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "umap-learn>=0.5.7",
    "sentence-transformers>=2.2.0",
    "transformers>=4.21.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0.2",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
on2vec = "on2vec.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/on2vec"
Repository = "https://github.com/your-username/on2vec"
Issues = "https://github.com/your-username/on2vec/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
]
notebook = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "requests>=2.28.0",
]
benchmark = [
    "mteb>=1.0.0",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "requests>=2.28.0",
    "mteb>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["on2vec"]
